[package]
name = "ascii-maker"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
axum = {version = "0.8.8", features=["multipart"]}
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"